src/objects/Account_Link__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shows this is the Activate Flag in use</description>
        <inlineHelpText>Activate Flag</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Retail_Task__c</referenceTo>
        <relationshipLabel>Account Link</relationshipLabel>
        <relationshipName>Account_Link</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Count__c</fullName>
        <label>Contract Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CorrelationID__c</fullName>
        <label>Correlation ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Link4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>CreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_By_EP_Transaction__c</fullName>
        <label>Created By EP Transaction</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentMileage__c</fullName>
        <label>CurrentMileage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomerID__c</fullName>
        <description>To Store the My Mercedes ID for My Car ID</description>
        <label>Customer ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_No__c</fullName>
        <label>Dealer No.</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <label>Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastInspectionDate__c</fullName>
        <label>LastInspectionDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Link5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <label>LastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastServiceDate__c</fullName>
        <label>Last Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastServiceMileage__c</fullName>
        <label>Last Service Mileage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LastWorkDate__c</fullName>
        <label>LastWorkDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Modified_User_Type__c</fullName>
        <formula>TEXT(LastModifiedBy.User_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified User Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Service_Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Service Dealer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Link (Last Service Dealer)</relationshipLabel>
        <relationshipName>Account_Link1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MBConnection__c</fullName>
        <label>MB Connection</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MD__c</fullName>
        <defaultValue>IF(ISPICKVAL($User.Market__c, &apos;AU&apos;) ,&apos;AU&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;CN&apos;), &apos;CN&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;JP&apos;), &apos;JP&apos;,
IF(ISPICKVAL($User.Market__c, &apos;TH&apos;), &apos;TH&apos;,
IF(ISPICKVAL($User.Market__c, &apos;KR&apos;), &apos;KR&apos;,&apos;NA&apos;)))))</defaultValue>
        <label>Market Discriminator</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <defaultValue>IF(ISPICKVAL($User.Market__c, &apos;AU&apos;) ,&apos;AU&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;CN&apos;), &apos;CN&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;JP&apos;), &apos;JP&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;TH&apos;), &apos;TH&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;KR&apos;), &apos;KR&apos;,
IF(ISPICKVAL($User.Market__c, &apos;MY&apos;) ,&apos;MY&apos;,&apos;NA&apos;))))))</defaultValue>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>JP</fullName>
                </value>
                <value>
                    <fullName>KR</fullName>
                </value>
                <value>
                    <fullName>TH</fullName>
                </value>
                <value>
                    <fullName>MY</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>CN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NextInspectionDate__c</fullName>
        <label>Next Inspection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NextMileage__c</fullName>
        <label>NextMileage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NextServiceDate__c</fullName>
        <label>Next Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Origin</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Link3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Personal_Abroad_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Personal Abroad Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Personal_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Personal Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Personal_Information_Third_Party_Release__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Personal Information Third Party Release</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Portal_Email__c</fullName>
        <label>Portal E-Mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Portal_ID__c</fullName>
        <label>My Mercedes Id</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Mail_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Portal Message Mail Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Portal_Message_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Portal Message Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Portal_Source__c</fullName>
        <label>Event</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Portal_Type__c</fullName>
        <label>Portal Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Normal (M-Care)</fullName>
                </value>
                <value>
                    <fullName>M-Care</fullName>
                </value>
                <value>
                    <fullName>Mercedes Benz Website</fullName>
                </value>
                <value>
                    <fullName>eInvite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Responsible_Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsible Dealer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Link (Responsible Dealer)</relationshipLabel>
        <relationshipName>Account_Link2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retail_Abroad_Agreement__c</fullName>
        <label>Retail Abroad Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retail_Address_CreatedDate__c</fullName>
        <description>Readonly</description>
        <label>Retail Address CreatedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Retail_Address_LastModifiedDate__c</fullName>
        <description>Readyonly</description>
        <label>Retail Address LastModifiedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Retail_Address_Line_1__c</fullName>
        <description>Readonly</description>
        <label>Retail Address Line 1</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Address_Line_2__c</fullName>
        <description>Readonly</description>
        <label>Retail Address Line 2</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Address_Line_3__c</fullName>
        <label>Retail Address Line 3</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Address_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Read Only</description>
        <label>Retail Address Reference</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Address__c.Customer__c</field>
                <operation>equals</operation>
                <valueField>$Source.toRole__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Account Link</relationshipLabel>
        <relationshipName>Account_Link</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retail_Address_Type__c</fullName>
        <description>Readonly</description>
        <label>Retail Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Other Address 1</fullName>
                </value>
                <value>
                    <fullName>Other Address 2</fullName>
                </value>
                <value>
                    <fullName>Other Address 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retail_Agreement_Info_Processing__c</fullName>
        <label>Retail Agreement info processing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retail_Agreement__c</fullName>
        <label>Retail Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retail_Allow_Data_Sharing__c</fullName>
        <description>Readonly</description>
        <label>Retail Allow Data Sharing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No Choice Yet</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retail_Business_Type__c</fullName>
        <label>Retail Business Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>W</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retail_City__c</fullName>
        <description>Readonly</description>
        <label>Retail City</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Comments__c</fullName>
        <description>Editable only by Dealer</description>
        <label>Retail Comments</label>
        <length>3200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Retail_Commercial_Reg_No__c</fullName>
        <description>Readonly</description>
        <label>Retail Commercial Reg No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Company_Name_Native1__c</fullName>
        <description>Read Only</description>
        <label>Retail Company Name Native</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Company_Name__c</fullName>
        <description>Read Only</description>
        <label>Retail Company Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Company_Other_Phone__c</fullName>
        <description>Readonly</description>
        <label>Retail Company Other Phone</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Company_Phone__c</fullName>
        <description>Readonly</description>
        <label>Retail Company Phone</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Complaint_Amount__c</fullName>
        <description>Editable only by Dealer</description>
        <label>Retail Complaing Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Retail_Consent_Form_Serial_No__c</fullName>
        <label>Retail Consent Form Serial No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Contact_Method__c</fullName>
        <label>Retail Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No correspondence</fullName>
                </value>
                <value>
                    <fullName>Letters to home address</fullName>
                </value>
                <value>
                    <fullName>Telephone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retail_Country__c</fullName>
        <description>Readonly</description>
        <label>Retail Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>New Zealand</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>Thailand</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retail_CreatedDate__c</fullName>
        <label>Retail CreatedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Retail_CustomerType__c</fullName>
        <label>Retail CustomerType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retail_DMS_Customer_ID__c</fullName>
        <description>Read Only</description>
        <label>Retail DMS Customer ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Dealer_CompanyCode__c</fullName>
        <formula>fromRole__r.Dealer_GC_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer GC Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Dealer_Company__c</fullName>
        <formula>fromRole__r.Company_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retail Dealer Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Delete_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retail Delete Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retail_Distinct__c</fullName>
        <description>Readonly</description>
        <label>Retail Distinct</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Duplicate_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Readyonly</description>
        <label>Retail Duplicate Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retail_Email_OptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retail Email OptOut</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retail_Email__c</fullName>
        <description>Readonly</description>
        <label>Retail Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Fax_OptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retail Fax OptOut</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retail_Fax__c</fullName>
        <description>Readonly</description>
        <label>Retail Fax</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_FirstName_Native__c</fullName>
        <label>Retail FirstName Native</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_FirstName__c</fullName>
        <label>Retail FirstName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_First_Consent_Date__c</fullName>
        <label>Retail First Consent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Retail_First_Consent_User__c</fullName>
        <label>Retail First Consent User</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Foundation_Month__c</fullName>
        <description>Readonly</description>
        <label>Retail Foundation Month</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Full_Name_Native__c</fullName>
        <description>Read Only</description>
        <label>Retail Full Name Native</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Full_Name_Title__c</fullName>
        <label>Retail Full Name Title</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Full_Name__c</fullName>
        <description>Read Only</description>
        <label>Retail Full Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Gender__c</fullName>
        <description>Read Only</description>
        <label>Retail Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retail_Individual_Home_Phone__c</fullName>
        <description>Readonly</description>
        <label>Retail Individual Home Phone</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Industry__c</fullName>
        <description>Read Only</description>
        <label>Retail Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>General equipment manufacturing</fullName>
                </value>
                <value>
                    <fullName>Special equipment manufacturing</fullName>
                </value>
                <value>
                    <fullName>Transportation Equipment Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Crafts and other manufacturing</fullName>
                </value>
                <value>
                    <fullName>Gas Production and Supply</fullName>
                </value>
                <value>
                    <fullName>Construction and installation industry</fullName>
                </value>
                <value>
                    <fullName>Road transport</fullName>
                </value>
                <value>
                    <fullName>Urban public transport sector</fullName>
                </value>
                <value>
                    <fullName>Water Transportation</fullName>
                </value>
                <value>
                    <fullName>Air transport</fullName>
                </value>
                <value>
                    <fullName>Warehousing</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Securities Industry</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Other financial activities</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Business Services</fullName>
                </value>
                <value>
                    <fullName>Other Services</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Health</fullName>
                </value>
                <value>
                    <fullName>State institutions</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Forestry</fullName>
                </value>
                <value>
                    <fullName>Fisheries</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Coal mining and washing</fullName>
                </value>
                <value>
                    <fullName>Ferrous metal mining industry</fullName>
                </value>
                <value>
                    <fullName>Nonferrous Metals</fullName>
                </value>
                <value>
                    <fullName>Food Manufacturing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retail_Information_Third_Party_Release__c</fullName>
        <label>Retail Information Third Party Release</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retail_LastModifiedDate__c</fullName>
        <label>Retail LastModifiedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Retail_LastName_Native__c</fullName>
        <label>Retail LastName Native</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_LastName__c</fullName>
        <label>Retail LastName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_List_of_Events__c</fullName>
        <label>Retail List of Events</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Domestic Trip</fullName>
                </value>
                <value>
                    <fullName>International Trip</fullName>
                </value>
                <value>
                    <fullName>Lifestyle Event/Workshop</fullName>
                </value>
                <value>
                    <fullName>Driving Event/Test Drive</fullName>
                </value>
                <value>
                    <fullName>Music/Concert</fullName>
                </value>
                <value>
                    <fullName>Movie</fullName>
                </value>
                <value>
                    <fullName>Golf (Mercedes Trophy)</fullName>
                </value>
                <value>
                    <fullName>New Product Launch</fullName>
                </value>
                <value>
                    <fullName>Dining/F&amp;B</fullName>
                </value>
                <value>
                    <fullName>Health/Beauty/Spa</fullName>
                </value>
                <value>
                    <fullName>Sport</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retail_Mobile__c</fullName>
        <description>Readonly</description>
        <label>Retail Mobile</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Occupation__c</fullName>
        <description>Read Only</description>
        <label>Retail Occupation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Office Staff</fullName>
                </value>
                <value>
                    <fullName>enterprise and public institution responsible officer</fullName>
                </value>
                <value>
                    <fullName>Self-employee</fullName>
                </value>
                <value>
                    <fullName>Primary Industry (Farming/ Fishing/ Forestry etc)</fullName>
                </value>
                <value>
                    <fullName>Doctor</fullName>
                </value>
                <value>
                    <fullName>Dentist</fullName>
                </value>
                <value>
                    <fullName>Lawyer</fullName>
                </value>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Show Business</fullName>
                </value>
                <value>
                    <fullName>Athlete</fullName>
                </value>
                <value>
                    <fullName>Pilot</fullName>
                </value>
                <value>
                    <fullName>Government employees</fullName>
                </value>
                <value>
                    <fullName>Teacher</fullName>
                </value>
                <value>
                    <fullName>Technician</fullName>
                </value>
                <value>
                    <fullName>Professionals &amp; Technical</fullName>
                </value>
                <value>
                    <fullName>Automotive related</fullName>
                </value>
                <value>
                    <fullName>Official Dealer</fullName>
                </value>
                <value>
                    <fullName>Pensioner</fullName>
                </value>
                <value>
                    <fullName>Housewife</fullName>
                </value>
                <value>
                    <fullName>Freelancers</fullName>
                </value>
                <value>
                    <fullName>Housekeeping</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Reject to answer</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retail_OptOutContact_Reason__c</fullName>
        <label>Retail Denied Activities</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Campaign (Aftersales)</fullName>
                </value>
                <value>
                    <fullName>Campaign (Finance)</fullName>
                </value>
                <value>
                    <fullName>Campaign (New Car)</fullName>
                </value>
                <value>
                    <fullName>Event (Aftersales)</fullName>
                </value>
                <value>
                    <fullName>Event (New Car)</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Gift</fullName>
                </value>
                <value>
                    <fullName>Magazine</fullName>
                </value>
                <value>
                    <fullName>MOT Car inspection</fullName>
                </value>
                <value>
                    <fullName>Product Info (Aftersales)</fullName>
                </value>
                <value>
                    <fullName>Product Info (Finance)</fullName>
                </value>
                <value>
                    <fullName>Product Info (New Car)</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>